Se han terminado los layouts del registro, pero tengo un problema al momento de agregar y mostrar los datos de la tarjeta

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     //Recycle View y card View
-    implementation 'androidx.recycleview:recycleview:1.1.0'
+    implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //Cloud Firebase
-    implementation 'com.google.firebase:firebase-firebase:21.6.0'
+
 }
