--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SumUpProject">
-        <activity android:name=".CardsActivity"></activity>
+        <activity
+            android:name=".RegisterCardActivity"
+            android:exported="false" />
+        <activity android:name=".CardsActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".AuthActivity" />
         <activity
