--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SumUpProject">
         <activity
-            android:name=".RegisterCardActivity"
+            android:name=".model.StreamActivity"
             android:exported="false" />
-        <activity android:name=".CardsActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".AuthActivity" />
+        <activity
+            android:name=".model.RegisterCardActivity"
+            android:exported="false" />
+        <activity android:name=".model.CardsActivity" />
+        <activity android:name=".model.RegisterActivity" />
+        <activity android:name=".model.AuthActivity" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
